<resources>
    <string name="app_name">   Certis Agent Tracking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Agent Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="enter_email">Please enter your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_mainmenu">Main Menu</string>
    <string name="main_menu">Main Menu</string>
    <string name="welcome">Welcome</string>
    <string name="view_schedule">View Schedule</string>
    <string name="title_activity_resetpassword">Reset Password</string>
    <string name="Enter_new_password">Please enter your new password</string>
    <string name="confrom_password">Confirm Password</string>
    <string name="view_location">View My Location</string>
    <string name="title_activity_my__location">My Location</string>
    <string name="enter_username">Please enter your username</string>
    <string name="enter_password">Please enter your password</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_schedule_">Schedule List</string>
    <string name="title_activity_visits_">Customer Visits</string>
    <string name="title_activity_visits_details">Customer Details</string>
    <string name="view_map">View on Map</string>
    <string name="tasks">View Tasks</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_visit__location">Visit Location</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_item_">Task List</string>
    <string name="title_activity_task">Task</string>
    <string name="btn_directions">View Directions</string>
    <string name="view_on_google_maps">View on Google Maps</string>
    <string name="task_status">Task Status</string>
    <string name="Commnet">Comment</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="field_officers">Field Officers</string>
    <string name="title_schedule">Schedule Name</string>
    <string name="tv_title_date">Schedule Date</string>
    <string name="customer_details">Customer Details</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="customer">Customer</string>
    <string name="visit_date">Visit Date</string>
    <string name="visit_location">Visit Location</string>
    <string name="visit_tim">Visit Time</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>

    <!-- Array for Task status spinner -->
    <string-array name="task_status">
        <item>None</item>
        <item>Complete</item>
        <item>Partially Complete</item>
        <item>Incomplete</item>
    </string-array>

</resources>
