<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#ffd4d4d4">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lk.agent.certislanka.certisagenttracking.VisitsDetailsActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_officers"
        android:id="@+id/textView3"
        android:textColor="#ff000000"
        android:textSize="14dp"
        android:paddingBottom="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_titl_schedule"
        android:background="@drawable/border_style"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/customer_details"
        android:id="@+id/textView4"
        android:textColor="#ff000000"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:textSize="14dp"
        android:textAlignment="center"
        android:phoneNumber="true"
        android:layout_below="@+id/tv_titl_schedule"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_style"
        android:weightSum="1"
        android:layout_weight="0.06">


        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/customer"
            android:id="@+id/textView2"
            android:layout_weight="0.12"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="227dp"
            android:layout_height="40dp"
            android:text="New Text"
            android:id="@+id/tv_new_cus"
            android:textSize="14dp"
            android:gravity="left"
            android:layout_toEndOf="@+id/textView6"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/visit_location"
            android:id="@+id/textView56"
            android:layout_weight="0.12"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:text="New Text"
            android:id="@+id/tv_new_date"
            android:textSize="14dp"
            android:gravity="left"
            android:layout_below="@+id/tv_new_cus"
            android:layout_alignStart="@+id/tv_new_cus"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/visit_date"
            android:id="@+id/textView6"
            android:layout_weight="0.12"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@+id/tv_new_date"
            android:layout_alignBottom="@+id/tv_new_date"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:text="New Text"
            android:id="@+id/tv_new_loc"
            android:textSize="14dp"
            android:gravity="left"
            android:layout_below="@+id/tv_new_date"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/visit_tim"
            android:id="@+id/textView8"
            android:layout_weight="0.12"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textView56"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/contact_no"
            android:id="@+id/textView10"
            android:layout_weight="0.12"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:text="New Text"
            android:id="@+id/tv_new_contact"
            android:textSize="14dp"
            android:gravity="left"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/textView8"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/address"
            android:id="@+id/textView12"
            android:layout_weight="0.12"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_alignEnd="@+id/textView10" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tv_new_add"
            android:textSize="14dp"
            android:gravity="left"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/tv_new_contact"
            android:layout_alignStart="@+id/tv_new_contact"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:text="New Text"
            android:id="@+id/tv_new_tim"
            android:layout_alignTop="@+id/textView8"
            android:layout_alignStart="@+id/tv_new_contact"
            android:layout_alignEnd="@+id/tv_new_loc"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textView7"
            android:layout_alignTop="@+id/tv_new_add"
            android:layout_toEndOf="@+id/textView56" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textView9"
            android:layout_alignTop="@+id/tv_new_contact"
            android:layout_toEndOf="@+id/textView56" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textView11"
            android:layout_above="@+id/textView10"
            android:layout_alignTop="@+id/tv_new_tim"
            android:layout_toEndOf="@+id/textView56" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textView13"
            android:layout_above="@+id/textView8"
            android:layout_alignTop="@+id/textView56"
            android:layout_alignStart="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textView14"
            android:layout_alignTop="@+id/textView6"
            android:layout_alignStart="@+id/textView13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:id="@+id/textView15"
            android:layout_alignTop="@+id/textView2"
            android:layout_toEndOf="@+id/textView56" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:id="@+id/btn_task"
        android:background="#F89B22"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/lbl_visit_time"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_map"
        android:id="@+id/btn_map"
        android:layout_marginTop="22dp"
        android:background="#F89B22"
        android:layout_below="@+id/btn_task"
        android:layout_alignParentStart="true" />

</LinearLayout>
</ScrollView>